--- a/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
+++ b/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Collections\KeyComparers.cs" />
     <Compile Include="Regressions\InvokeLogisticRegression.cs" />
+    <Compile Include="Regressions\InvokeStepwiseLogisticRegression.cs" />
     <Compile Include="Tests\InvokeBinomialTest.cs" />
     <Compile Include="Tests\InvokeChiSquareTest.cs" />
     <Compile Include="Collections\Vector.cs" />
