--- a/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
+++ b/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
@@ -68,15 +68,17 @@
     <Compile Include="Collections\DataFrameGroup.cs" />
     <Compile Include="Distributions\Distributions.cs" />
     <Compile Include="Analyses\InvokeDescriptiveAnalysis.cs" />
-    <Compile Include="Regressions\InvokeGeneralizedLinearRegression.cs" />
-    <Compile Include="Regressions\InvokeLinearRegression.cs" />
+    <Compile Include="Functions\Functions.cs" />
+    <Compile Include="Regressions\Cmdlets\InvokeGeneralizedLinearRegression.cs" />
+    <Compile Include="Regressions\Cmdlets\InvokeLinearRegression.cs" />
     <Compile Include="Collections\Cmdlets\NewDataFrame.cs" />
     <Compile Include="Collections\Cmdlets\NewSequence.cs" />
     <Compile Include="Collections\Cmdlets\NewVector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Collections\KeyComparers.cs" />
-    <Compile Include="Regressions\InvokeLogisticRegression.cs" />
-    <Compile Include="Regressions\InvokeStepwiseLogisticRegression.cs" />
+    <Compile Include="Regressions\Cmdlets\InvokeLogisticRegression.cs" />
+    <Compile Include="Regressions\Cmdlets\InvokeStepwiseLogisticRegression.cs" />
+    <Compile Include="Regressions\Expression.cs" />
     <Compile Include="Tests\InvokeBinomialTest.cs" />
     <Compile Include="Tests\InvokeChiSquareTest.cs" />
     <Compile Include="Collections\Vector.cs" />
