--- a/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
+++ b/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
@@ -63,13 +63,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\Cmdlets\GetSlice.cs" />
     <Compile Include="Collections\Converter.cs" />
     <Compile Include="Collections\DataFrame.cs" />
     <Compile Include="Collections\DataFrameGroup.cs" />
     <Compile Include="Distributions\Distributions.cs" />
     <Compile Include="Analyses\InvokeDescriptiveAnalysis.cs" />
     <Compile Include="Functions\Functions.cs" />
-    <Compile Include="Utilities\Get-Slice.cs" />
+    <Compile Include="Collections\Slice.cs" />
     <Compile Include="Regressions\Cmdlets\InvokeGeneralizedLinearRegression.cs" />
     <Compile Include="Regressions\Cmdlets\InvokeLinearRegression.cs" />
     <Compile Include="Collections\Cmdlets\NewDataFrame.cs" />
