--- a/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
+++ b/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
@@ -64,9 +64,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\Cmdlets\GetSlice.cs" />
+    <Compile Include="Collections\Cmdlets\NewMath.Matrix.cs" />
     <Compile Include="Collections\Converter.cs" />
     <Compile Include="Collections\DataFrame.cs" />
     <Compile Include="Collections\DataFrameGroup.cs" />
+    <Compile Include="Collections\Matrix.cs" />
     <Compile Include="Distributions\Distributions.cs" />
     <Compile Include="Analyses\InvokeDescriptiveAnalysis.cs" />
     <Compile Include="Functions\Functions.cs" />
