--- a/source/Tests/Tests.csproj
+++ b/source/Tests/Tests.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewMathMatrixTest.cs" />
     <Compile Include="TestDataFrame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestVector.cs" />
