Update project folder structure

--- a/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
+++ b/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
@@ -63,45 +63,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Collections\Cmdlets\GetSlice.cs" />
-    <Compile Include="Collections\Cmdlets\NewMathMatrix.cs" />
-    <Compile Include="Collections\Converter.cs" />
-    <Compile Include="Collections\DataFrame.cs" />
-    <Compile Include="Collections\DataFrameGroup.cs" />
-    <Compile Include="Collections\Matrix.cs" />
-    <Compile Include="Distributions\Distributions.cs" />
-    <Compile Include="Analyses\InvokeDescriptiveAnalysis.cs" />
-    <Compile Include="Functions\MatrixCmdlets.cs" />
-    <Compile Include="Functions\MathCmdlets.cs" />
-    <Compile Include="Collections\Slice.cs" />
-    <Compile Include="Regressions\Cmdlets\InvokeGeneralizedLinearRegression.cs" />
-    <Compile Include="Regressions\Cmdlets\InvokeLinearRegression.cs" />
-    <Compile Include="Collections\Cmdlets\NewSequence.cs" />
+    <Compile Include="Collections\Slice\GetSlice.cs" />
+    <Compile Include="Collections\Matrix\NewMathMatrix.cs" />
+    <Compile Include="Collections\DataFrame\Converter.cs" />
+    <Compile Include="Collections\DataFrame\DataFrame.cs" />
+    <Compile Include="Collections\DataFrame\DataFrameGroup.cs" />
+    <Compile Include="Collections\Matrix\Matrix.cs" />
+    <Compile Include="Statistics\Distributions\Distributions.cs" />
+    <Compile Include="Statistics\Analyses\InvokeDescriptiveAnalysis.cs" />
+    <Compile Include="Collections\Matrix\MatrixCmdlets.cs" />
+    <Compile Include="Math\MathCmdlets.cs" />
+    <Compile Include="Collections\Slice\Slice.cs" />
+    <Compile Include="Statistics\Regressions\InvokeGeneralizedLinearRegression.cs" />
+    <Compile Include="Statistics\Regressions\InvokeLinearRegression.cs" />
+    <Compile Include="Collections\Sequence\NewSequence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Collections\KeyComparers.cs" />
-    <Compile Include="Regressions\Cmdlets\InvokeLogisticRegression.cs" />
-    <Compile Include="Regressions\Cmdlets\InvokeStepwiseLogisticRegression.cs" />
-    <Compile Include="Regressions\Expression.cs" />
-    <Compile Include="Tests\InvokeBinomialTest.cs" />
-    <Compile Include="Tests\InvokeChiSquareTest.cs" />
-    <Compile Include="Collections\Vector.cs" />
-    <Compile Include="Tests\InvokeFisherExactTest.cs" />
-    <Compile Include="Tests\InvokeFTest.cs" />
-    <Compile Include="Tests\InvokeKolmogorovSmirnovTest.cs" />
-    <Compile Include="Tests\InvokeLeveneTest.cs" />
-    <Compile Include="Tests\InvokeMannWhitneyWilcoxonTest.cs" />
-    <Compile Include="Tests\InvokeOneWayAnova.cs" />
-    <Compile Include="Tests\InvokeShapiroWilkTest.cs" />
-    <Compile Include="Tests\InvokeSignTest.cs" />
-    <Compile Include="Tests\InvokeTTest.cs" />
-    <Compile Include="Tests\InvokeTwoSampleKolmogorovSmirnovTest.cs" />
-    <Compile Include="Tests\InvokeTwoSampleSignTest.cs" />
-    <Compile Include="Tests\InvokeTwoSampleTTest.cs" />
-    <Compile Include="Tests\InvokeTwoWayAnova.cs" />
-    <Compile Include="Tests\InvokeWilcoxonSignedRankTest.cs" />
-    <Compile Include="Tests\InvokePairedTTest.cs" />
-    <Compile Include="Tests\TestHelper.cs" />
-    <Compile Include="Tests\InvokeTwoSampleWilcoxonSignedRankTest.cs" />
+    <Compile Include="Collections\DataFrame\KeyComparers.cs" />
+    <Compile Include="Statistics\Regressions\InvokeLogisticRegression.cs" />
+    <Compile Include="Statistics\Regressions\InvokeStepwiseLogisticRegression.cs" />
+    <Compile Include="Statistics\Regressions\Expression.cs" />
+    <Compile Include="Statistics\Tests\InvokeBinomialTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeChiSquareTest.cs" />
+    <Compile Include="Collections\DataFrame\Vector.cs" />
+    <Compile Include="Statistics\Tests\InvokeFisherExactTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeFTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeKolmogorovSmirnovTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeLeveneTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeMannWhitneyWilcoxonTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeOneWayAnova.cs" />
+    <Compile Include="Statistics\Tests\InvokeShapiroWilkTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeSignTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeTTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeTwoSampleKolmogorovSmirnovTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeTwoSampleSignTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeTwoSampleTTest.cs" />
+    <Compile Include="Statistics\Tests\InvokeTwoWayAnova.cs" />
+    <Compile Include="Statistics\Tests\InvokeWilcoxonSignedRankTest.cs" />
+    <Compile Include="Statistics\Tests\InvokePairedTTest.cs" />
+    <Compile Include="Statistics\Tests\TestHelper.cs" />
+    <Compile Include="Statistics\Tests\InvokeTwoSampleWilcoxonSignedRankTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
