--- a/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
+++ b/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
@@ -63,8 +63,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Collections\Slice\GetSlice.cs" />
-    <Compile Include="Collections\Matrix\NewMathMatrix.cs" />
+    <Compile Include="Collections\Slice\Get-Math.Slice.cs" />
+    <Compile Include="Collections\Matrix\New-Math.Matrix.cs" />
     <Compile Include="Collections\DataFrame\Converter.cs" />
     <Compile Include="Collections\DataFrame\DataFrame.cs" />
     <Compile Include="Collections\DataFrame\DataFrameGroup.cs" />
@@ -76,7 +76,7 @@
     <Compile Include="Collections\Slice\Slice.cs" />
     <Compile Include="Statistics\Regressions\InvokeGeneralizedLinearRegression.cs" />
     <Compile Include="Statistics\Regressions\InvokeLinearRegression.cs" />
-    <Compile Include="Collections\Sequence\NewSequence.cs" />
+    <Compile Include="Collections\Sequence\SequenceCmdlets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Collections\DataFrame\KeyComparers.cs" />
     <Compile Include="Statistics\Regressions\InvokeLogisticRegression.cs" />
