--- a/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
+++ b/source/Horker.DataAnalysis/Horker.DataAnalysis.csproj
@@ -77,7 +77,9 @@
     <Compile Include="Collections\DataFrame\DataFrameGroup.cs" />
     <Compile Include="Collections\Matrix\Matrix.cs" />
     <Compile Include="Conversions\ConversionCmdlets.cs" />
-    <Compile Include="PSObjects\Get-Math.DataSummary.cs" />
+    <Compile Include="Math\DataSummary.cs" />
+    <Compile Include="PSObjects\Get-PSObject.Information.cs" />
+    <Compile Include="PSObjects\Get-PSObject.Summary.cs" />
     <Compile Include="PSObjects\PSObjectsCmdletBase.cs" />
     <Compile Include="Statistics\Distributions\Distributions.cs" />
     <Compile Include="Statistics\Analyses\InvokeDescriptiveAnalysis.cs" />
