--- a/source/Tests/Tests.csproj
+++ b/source/Tests/Tests.csproj
@@ -66,7 +66,7 @@
     <Compile Include="NewMathSequenceTest.cs" />
     <Compile Include="TestDataFrame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestVector.cs" />
+    <Compile Include="TestDataFrameColumn.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
