Implement pso.onehot

--- a/source/Horker.Math/Horker.Math.csproj
+++ b/source/Horker.Math/Horker.Math.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Math\DataSummary.cs" />
     <Compile Include="PSObjects\Get-PSObject.Information.cs" />
     <Compile Include="PSObjects\Get-PSObject.Summary.cs" />
+    <Compile Include="PSObjects\New-PSObject.OneHot.cs" />
     <Compile Include="PSObjects\PSObjectsCmdletBase.cs" />
     <Compile Include="Statistics\Distributions\Distributions.cs" />
     <Compile Include="Statistics\Analyses\InvokeDescriptiveAnalysis.cs" />
