--- a/source/Horker.Math/Horker.Math.csproj
+++ b/source/Horker.Math/Horker.Math.csproj
@@ -79,10 +79,12 @@
     <Compile Include="Collections\Matrix\Matrix.cs" />
     <Compile Include="Conversions\ConversionCmdlets.cs" />
     <Compile Include="Math\DataSummary.cs" />
-    <Compile Include="PSObjects\Get-PSObject.Information.cs" />
-    <Compile Include="PSObjects\Get-PSObject.Summary.cs" />
-    <Compile Include="PSObjects\New-PSObject.OneHot.cs" />
-    <Compile Include="PSObjects\ObjectListCmdletBase.cs" />
+    <Compile Include="PSObject\New-PSObject.TruthTable.cs" />
+    <Compile Include="PSObject\Get-PSObject.TypeInformation.cs" />
+    <Compile Include="PSObject\AdditionalPSObjectMethods.cs" />
+    <Compile Include="PSObject\Get-PSObject.Summary.cs" />
+    <Compile Include="PSObject\New-PSObject.OneHot.cs" />
+    <Compile Include="PSObject\ObjectListCmdletBase.cs" />
     <Compile Include="Statistics\Distributions\Distributions.cs" />
     <Compile Include="Statistics\Analyses\InvokeDescriptiveAnalysis.cs" />
     <Compile Include="Collections\Matrix\MatrixCmdlets.cs" />
