--- a/source/Tests/Tests.csproj
+++ b/source/Tests/Tests.csproj
@@ -61,8 +61,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NewMathMatrixTest.cs" />
-    <Compile Include="NewMathSequenceTest.cs" />
+    <Compile Include="TestArrayMethods.cs" />
+    <Compile Include="TestNewMathMatrix.cs" />
+    <Compile Include="TestNewMathSequence.cs" />
     <Compile Include="TestDataFrame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDataFrameColumn.cs" />
