--- a/source/Tests/Tests.csproj
+++ b/source/Tests/Tests.csproj
@@ -55,6 +55,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\WindowsPowerShell\3.0\System.Management.Automation.dll</HintPath>
@@ -62,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestArrayMethods.cs" />
+    <Compile Include="TestDataTableMethods.cs" />
     <Compile Include="TestNewMathMatrix.cs" />
     <Compile Include="TestNewMathSequence.cs" />
     <Compile Include="TestDataFrame.cs" />
